--- a/partials/clusters.html
+++ b/partials/clusters.html
@@ -1,5 +1,5 @@
 <div ng-app="myApp">
-        <div ng-controller="ClusterFunc" ng-init="init(widget.arg)">
+ <div ng-controller="ClusterFunc" ng-init="init(widget.arg)">
   <button type="button" ng-click="open()" class="close"><i class="icon-pencil"></i></button>
   <div class="clearfix"></div>
   <div modal="shouldBeOpen" close="close()" options="opts">
@@ -51,7 +51,7 @@
       </tr>
     </thead>
     <tbody>
-    <tr class="{{ classes(server); }}" ng-repeat="server in servers">
+    <tr class="{{ classes(server); }}" ng-repeat="cluster in clusters">
       <td width="0"><i ng-click="expandServer($index);" class="icon-search" ng-init="loadData()"></i></td>
       <td>{{ cluster.clusterid }}</td>
       <td>{{ cluster.version }}</td>
